Improved #events text contrast, .hex-container hover transition bug fix
Also merged a few CSS rules; these should perhaps be in common classes since they share so much?

--- a/css/nvdagen.css
+++ b/css/nvdagen.css
@@ -102,7 +102,7 @@ h1.logoType {
 	padding: 3em;
 	margin-bottom: 2em;
 	text-align: center;
-
+    padding-bottom: 2em;
 }
 
 .fullRow{
@@ -182,6 +182,10 @@ i .infoContent{
 	text-align: center;
 	color: white;
 	font-size: 1.8em;
+}
+
+#events p.infoCol-text, #events h2.infoCol-header {
+    text-shadow: 0 0 0.75em rgba(0,0,0,0.6);
 }
 
 .infoImg{
@@ -351,9 +355,10 @@ h2.logoType {
     position: relative;
     transform: translateY(-50%);
 	-webkit-transform: translateY(-50%);
-	transition: font-size 0.5s ease;
+	transition: font-size 0.5s ease, height 0.5s ease, width 0.5s ease;
 	font-size: 1em;
 }
+
 .hex-container:hover * {
 	font-size: 1.2em;
 }
@@ -363,7 +368,7 @@ h2.logoType {
     position: relative;
     transform: translateY(-50%);
 	-webkit-transform: translateY(-50%);
-	transition: font-size 0.5s ease;
+	transition: font-size 0.5s ease, height 0.5s ease, width 0.5s ease;
 	font-size: 1em;
 }
 
@@ -397,7 +402,6 @@ h2.logoType {
 	max-width: 65em;
 }
 
-
 .sectionTitle{
 	text-align: center;
 }
@@ -410,7 +414,6 @@ h2.logoType {
 	background-color: #49887B;
 }
 
-
 .section:hover .titleUnderline{
 	margin: auto;
 	width: 20em;
@@ -420,30 +423,25 @@ h2.logoType {
 
 }
 
-
 .companySection .company .imgContainer {
-	border-style: none;
-    cursor: pointer;
     height: 6em;
     width: 6em;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-image: url("/Nettverksdagen/Nettverksdagen_Logo_transparent.png");
-    margin: 0 auto;
-    background-position: 50% 50%;
 }
 
 .companySection .company .imgContainer-lg {
-	border-style: none;
-    cursor: pointer;
     height: 9em;
     width: 9em;
+}
+
+.companySection .company .imgContainer,
+.companySection .company .imgContainer-lg {
+	border-style: none;
+    cursor: pointer;
     background-size: contain;
     background-repeat: no-repeat;
     margin: 0 auto;
     background-position: 50% 50%;
 }
-
 
 
 .companySection .company .hex-container {
